--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node-express-mongodb-server",
+  "name": "web-dev-minor-2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
